--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Ignore node_modules folders
 backend/node_modules/
 frontend/node_modules/
+node_modules/
 
 # Ignore environment file
 backend/.env
 
 # Ignore editor settings and other unnecessary files
 .vscode/
+
+# Ignore package-lock.json in root
+package-lock.json
